--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,18 +6,21 @@ services:
     ports:
       - "4000:4000"
       - "8080:8080"
-  firesert:
-    image: jonnyorman/firesert:latest
+      - "8085:8085"
+  pubsubmit-create:
+    image: jonnyorman/pubsubmit:latest
     env_file:
       - ../.env
     environment:
       PORT: 3001
+      OPERATION: "create"
+      PUBSUB_EMULATOR_HOST: firebase-emulator:8085
     ports:
       - "3001:3001"
     depends_on:
-      - firebase-emulator
-  firead:
-    image: jonnyorman/firead:latest
+      - pubsub-setup
+  firesert:
+    image: jonnyorman/firesert:latest
     env_file:
       - ../.env
     environment:
@@ -26,13 +29,30 @@ services:
       - "3002:3002"
     depends_on:
       - firebase-emulator
-  firelete:
-    image: jonnyorman/firelete:latest
+  firead:
+    image: jonnyorman/firead:latest
     env_file:
       - ../.env
     environment:
       PORT: 3003
     ports:
       - "3003:3003"
+    depends_on:
+      - firebase-emulator
+  firelete:
+    image: jonnyorman/firelete:latest
+    env_file:
+      - ../.env
+    environment:
+      PORT: 3004
+    ports:
+      - "3004:3004"
+    depends_on:
+      - firebase-emulator
+  pubsub-setup:
+    image: jonnyorman/pubsub-provisioner:latest
+    environment:
+      PUBSUB_EMULATOR_HOST: firebase-emulator:8085
+      PUBSUB_CONFIG: '{ "projectId": "my-fireworks-project", "topics": [ { "topicId": "MyCollection-create-submit", "subscriptions": [ { "type": "push", "subscriptionId": "MyCollection-submit-complete", "ackDeadlineSeconds": 10, "pushEndpoint": "http://firesert:3002" } ] } ] }'
     depends_on:
       - firebase-emulator
