--- a/firebase-emulator/firebase.json
+++ b/firebase-emulator/firebase.json
@@ -1,11 +1,13 @@
 {
-    "emulators": {
-      "firestore": {
-        "host": "0.0.0.0"
-      },
-      "ui": {
-        "host": "0.0.0.0"
-      }
+  "emulators": {
+    "firestore": {
+      "host": "0.0.0.0"
+    },
+    "pubsub": {
+      "host": "0.0.0.0"
+    },
+    "ui": {
+      "host": "0.0.0.0"
     }
   }
-  
+}
